Introduce a Sandbox repository service boundary
Confine the copied Hibernate repository implementation to one adapter and expose application-owned repository lifecycle and metadata contracts to REST, startup and Smart HTTP.

Refs #1303